[VOTEIT-4] add registration process with Spring Security (#14)